Move to custom domain: blog.lcy.one

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ tag_archive:
 locale: zh-TW
 title: LCY's Notes
 name: lcy
-url: https://lcy0321.github.io
+url: https://blog.lcy.one
 search: true
 github: lcy0321
 timezone: Asia/Taipei
